// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check page horizontal layout example against snapshot 1`] = `
<Page
  aria-label="Page layout"
  className="my-page-class"
  header={
    <PageHeader
      aria-label="Global navigation"
      avatar=" | Avatar"
      className=""
      isNavOpen={true}
      logo="Logo"
      logoProps={null}
      nav="Navigation"
      onNavToggle={[Function]}
      showNavToggle={false}
      toolbar="Toolbar"
      topNav={null}
    />
  }
  id="PageId"
  isManagedSidebar={false}
  layout="horizontal"
  onPageResize={null}
  sidebar={
    <PageSidebar
      className=""
      isNavOpen={true}
      nav={null}
    />
  }
>
  <div
    aria-label="Page layout"
    className="pf-c-page my-page-class"
    id="PageId"
    layout="horizontal"
  >
    <PageHeader
      aria-label="Global navigation"
      avatar=" | Avatar"
      className=""
      isNavOpen={true}
      logo="Logo"
      logoProps={null}
      nav="Navigation"
      onNavToggle={[Function]}
      showNavToggle={false}
      toolbar="Toolbar"
      topNav={null}
    >
      <header
        className="pf-c-page__header"
        nav="Navigation"
        role="banner"
      >
        <div
          className="pf-c-page__header-brand"
        >
          <a
            className="pf-c-page__header-brand-link"
          >
            Logo
          </a>
        </div>
        <div
          className="pf-c-page__header-tools"
        >
          Toolbar
           | Avatar
        </div>
      </header>
    </PageHeader>
    <PageSidebar
      className=""
      isNavOpen={true}
      nav={null}
    >
      <div
        className="pf-c-page__sidebar pf-m-expanded"
        id="page-sidebar"
      />
    </PageSidebar>
    <main
      className="pf-c-page__main"
      role="main"
    >
      <PageSection
        className=""
        variant="default"
      >
        <section
          className="pf-c-page__main-section"
        >
          Section with default background
        </section>
      </PageSection>
      <PageSection
        className=""
        variant="light"
      >
        <section
          className="pf-c-page__main-section pf-m-light"
        >
          Section with light background
        </section>
      </PageSection>
      <PageSection
        className=""
        variant="dark"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-200"
        >
          Section with dark background
        </section>
      </PageSection>
      <PageSection
        className=""
        variant="darker"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-100"
        >
          Section with darker background
        </section>
      </PageSection>
    </main>
  </div>
</Page>
`;

exports[`Check page vertical layout example against snapshot 1`] = `
<Page
  aria-label="Page layout"
  className="my-page-class"
  header={
    <PageHeader
      aria-label="Global navigation"
      avatar=" | Avatar"
      className=""
      isNavOpen={true}
      logo="Logo"
      logoProps={null}
      onNavToggle={[Function]}
      showNavToggle={false}
      toolbar="Toolbar"
      topNav={null}
    />
  }
  id="PageId"
  isManagedSidebar={false}
  onPageResize={null}
  sidebar={
    <PageSidebar
      className=""
      isNavOpen={true}
      nav="Navigation"
    />
  }
>
  <div
    aria-label="Page layout"
    className="pf-c-page my-page-class"
    id="PageId"
  >
    <PageHeader
      aria-label="Global navigation"
      avatar=" | Avatar"
      className=""
      isNavOpen={true}
      logo="Logo"
      logoProps={null}
      onNavToggle={[Function]}
      showNavToggle={false}
      toolbar="Toolbar"
      topNav={null}
    >
      <header
        className="pf-c-page__header"
        role="banner"
      >
        <div
          className="pf-c-page__header-brand"
        >
          <a
            className="pf-c-page__header-brand-link"
          >
            Logo
          </a>
        </div>
        <div
          className="pf-c-page__header-tools"
        >
          Toolbar
           | Avatar
        </div>
      </header>
    </PageHeader>
    <PageSidebar
      className=""
      isNavOpen={true}
      nav="Navigation"
    >
      <div
        className="pf-c-page__sidebar pf-m-expanded"
        id="page-sidebar"
      >
        Navigation
      </div>
    </PageSidebar>
    <main
      className="pf-c-page__main"
      role="main"
    >
      <PageSection
        className=""
        variant="default"
      >
        <section
          className="pf-c-page__main-section"
        >
          Section with default background
        </section>
      </PageSection>
      <PageSection
        className=""
        variant="light"
      >
        <section
          className="pf-c-page__main-section pf-m-light"
        >
          Section with light background
        </section>
      </PageSection>
      <PageSection
        className=""
        variant="dark"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-200"
        >
          Section with dark background
        </section>
      </PageSection>
      <PageSection
        className=""
        variant="darker"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-100"
        >
          Section with darker background
        </section>
      </PageSection>
    </main>
  </div>
</Page>
`;
